# aws-ecs-cicd

./: .gitignore  README.md  buildspec.yaml  package-lock.json  package.json  pyproject.toml  task-definition.json
.github/: renovate.json5
.github/workflows/: README.md  deploy.yaml  renovate.yaml
apps/docs/: README.md  project.json  pyproject.toml
apps/docs/docs/: __main__.py
apps/docs/tests/: conftest.py
apps/infra/: README.md  cdk.json  project.json  pyproject.toml
apps/infra/infra/: __main__.py  stack.py
apps/infra/tests/: test_stack.py
apps/webapp/: Dockerfile  README.md  project.json  pyproject.toml
apps/webapp/tests/: conftest.py  test_app.py
apps/webapp/webapp/: __init__.py  __main__.py  main.py
apps/webapp/webapp/static/css/: styles.css
apps/webapp/webapp/templates/: base.html  index.html
apps/webapp/webapp/tests/: fixtures.py
