[tool.coverage.run]
branch = true
source = [ "docs" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/apps/docs/html' --cov-report xml:'../../coverage/apps/docs/coverage.xml' --junitxml='../../reports/apps/docs/unittests/junit.xml' --html='../../reports/apps/docs/unittests/html/index.html'"

[tool.poetry]
name = "docs"
version = "1.0.0"
description = ""
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "docs"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.11"
  diagrams = "^0.23.4"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
